docs: update CLAUDE.md run/styling notes and HANDOVER.md
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>