@@ -1,79 +1,85 @@
-﻿# HANDOVER
+# HANDOVER
 
-## Date / branch / PR / CI
+## Date, branch, PR, CI
+
 - Date: 2026-07-19
-- Branch: `main` (all work merged; no open PRs, no feature branches).
-- Latest release: **v1.3.2** (tag on `main`). CI (Build Installers) green: Windows + macOS
-  client/server installers attached to the GitHub release.
+- Branch: main (clean, synced with origin)
+- PR: #22 "feat: Soft Warm Minimal UI restyle + rename cleanup" MERGED into main
+- CI: no new release tag this session; latest release remains v1.3.2
 
 ## TLDR of session outcome
-DONE and shipped (v1.3.0 -> v1.3.1 -> v1.3.2):
-- Full client visual rebuild: Ikonli vector icons (`dk.dtu.ui.Icons`), violet checklist logo,
-  single styling authority (AtlantaFX Primer + one `common.css`), dark mode that looks intentional.
-- Real JavaFX `TableView` for lists + tasks via the `dk.dtu.ui.Tables` adapter (reuses the
-  `dk.dtu.collumns.*` `Column` classes): resizable + auto-fit columns, an "Auto-fit columns"
-  button, vertical dividers, single scrollbar, status row tints, drag-reorder.
-- Dark native Windows title bar via DWM (`dk.dtu.ui.WindowChrome`, JNA).
-- Remember-server auto-connect.
-- Performance: `dk.dtu.methods.Spaces` connection pool (reuse one `RemoteSpace` per space,
-  `IO_LOCK` serializes ops) + `Users.getUsersCached` (one user query per view, not per row).
-- Fixed the v1.3.0 packaged-app crash (jlink runtime was missing `java.logging`, which Ikonli
-  needs) by expanding the CI `--add-modules` list; that fix is v1.3.1.
-- v1.3.2 installer was downloaded and its installer launched on Patrick's PC.
+
+- Done: repo rename to `patr7257/TodoList` finished everywhere (git remote,
+  `UpdateChecker.REPO`, HANDOVER/script paths). CI workflow needed no changes.
+- Done: full client restyle to "Soft Warm Minimal" (picked from 5 artifact
+  mockups): warm-paper light + warm-charcoal dark. `common.css` holds structure
+  plus LIGHT tokens; new `theme-warm-dark.css` holds DARK token re-overrides;
+  `DarkModeManager.applyBrand` swaps them and dialogs delegate to it. Serif
+  (Georgia) display titles, status pills, theme-aware row tints.
+- Done: verified live on Windows in BOTH themes: welcome, login, main menu
+  (screenshots `screenshots/ui4-*.png`, gitignored). `mvn test` and full
+  `mvn install` green.
+- Not verified: task view status pills + row tints in the running app
+  (synthetic double-clicks never registered, could not open a list remotely).
 
 ## Prioritized next steps
-1. Confirm v1.3.2 on Patrick's PC: dark title bar in dark mode, Auto-fit button, and that
-   actions (create list, click into a list) now feel snappy against the hosted server.
-2. If it still is not instant enough: add optimistic UI (reflect the user's change immediately,
-   persist in the background, revert on failure). That is the next perf lever after connection reuse.
-3. Install v1.3.2 on the girlfriend's PC (in-app updater, or the release MSI).
-4. Verify the in-app updater actually works on v1.3.2 (Settings -> Updates should say "current"
-   quickly). On v1.2.0 it hung on "Checking..."; if it still hangs, move the version check off the
-   rate-limited GitHub API to the `releases/latest` redirect.
-5. Separate track (different repo): the phone/PWA todolist + shared backend is `patrickrobelweb`
-   issue #90, not this repo.
 
-## Verbatim resume commands (PowerShell)
-Build everything (jSpace must already be installed locally):
+1. Open a todo list in the app and eyeball status pills + row tints in both
+   themes; tweak `-status-*` tokens in `common.css` / `theme-warm-dark.css` if
+   contrast feels off.
+2. Delete the 5 mockup artifacts at claude.ai/code/artifacts (CLI cannot).
+3. Tag a release (`v*`) when the new look is confirmed so installers pick it up.
+4. Optional: bundle a real serif/display font (Lora) instead of Georgia if the
+   serif should look identical on macOS.
+
+## Verbatim resume commands
+
+```powershell
+cd "C:\Users\pr\repos\1-Personal\TodoList"; mvn -q install -DskipTests
 ```
-cd "C:\Users\pr\repos\1-Personal\TodoList"; mvn clean install
+
+```powershell
+cd "C:\Users\pr\repos\1-Personal\TodoList"; mvn -pl server exec:java
 ```
-Run the client from source against the hosted server (your normal server):
+
+```powershell
+cd "C:\Users\pr\repos\1-Personal\TodoList"; mvn -pl client javafx:run
 ```
-cd "C:\Users\pr\repos\1-Personal\TodoList\client"; mvn -q javafx:run -Djavafx.run.jvmArgs="-Dtodolist.server.ip=100.100.220.67 -Dtodolist.port=9001"
-```
-Screenshot the running client window (auto-numbered PNGs in `screenshots\`):
-```
+
+```powershell
 cd "C:\Users\pr\repos\1-Personal\TodoList"; powershell -ExecutionPolicy Bypass -File scripts\snap.ps1
 ```
 
 ## Gotchas discovered this session
-- Packaged (jpackage/jlink) app crashes SILENTLY at startup if the runtime misses a JDK module a
-  dependency uses. Ikonli + JNA need `java.logging`; CI `--add-modules` now lists the full set
-  (see CLAUDE.md "Packaging installers"). `mvn javafx:run` works even when packaging is broken, so
-  ALWAYS test the real MSI, never just the dev run, before trusting a release.
-- Auto-fit columns: JavaFX 21 has NO `resizeColumnToFitContent` on the skin. It lives on the
-  per-column `TableColumnHeader.resizeColumnToFitContent(int)`, reached by reflecting
-  skin -> `getTableHeaderRow` -> `getRootHeader` -> `getColumnHeaders` (see `dk.dtu.ui.Tables`),
-  and needs `--add-opens javafx.controls/javafx.scene.control.skin=ALL-UNNAMED` (in `client/pom.xml`
-  and the CI client jpackage step).
-- Automated screenshots of the JavaFX app (PrintWindow / CopyFromScreen) are UNRELIABLE for layout
-  (GPU surface; resizing via Win32 MoveWindow desyncs the scene). For centering/layout truth use
-  Patrick's OS screenshots or runtime `localToScene` bounds logging, not my captures.
-- jSpace: `new RemoteSpace(uri)` is a full TCP + handshake every time. Always use
-  `dk.dtu.methods.Spaces.get(uri)` (pooled) under `Spaces.IO_LOCK`. The NotificationListener's
-  long-blocking `get` MUST stay on its own dedicated connection OUTSIDE that lock.
-- Demo server users are Alice/Bob/Charlize; the Patrick/Elinooh login buttons are configured
-  main-users that only exist on the real hosted server.
+
+- Do NOT use `-am` with `exec:java` / `javafx:run`: the goal also runs on the
+  parent aggregate and fails on missing `mainClass`. Install first, then run
+  the single module (CLAUDE.md updated).
+- `-Dtodolist.server.ip` cannot be passed through `mvn javafx:run`: the
+  javafx-maven-plugin 0.0.6 execution config ignores CLI `-Djavafx.run.jvmArgs`
+  and `-Djavafx.options`, and the client auto-connects to the last good server
+  saved by `ServerPrefs` (registry `HKCU:\Software\JavaSoft\Prefs\dk\dtu`).
+  Use the in-app Change Server dialog for dev.
+- The dev client on this machine auto-connects to the PRODUCTION Tailscale
+  server (100.100.220.67). "List created/deleted" lines flooding the console at
+  startup are the notification listener replaying the server's notification
+  tuple backlog, not live changes.
+- `scripts/snap.ps1` captures at the wrong size on high-DPI (not DPI-aware);
+  PrintWindow + `SetProcessDPIAware` fixes it and also works with the window in
+  the background (pattern lived in this session's scratchpad drive.ps1).
+- Posted window messages (PostMessage) reach JavaFX for single clicks but
+  never produce clickCount 2, so double-click row opening cannot be driven
+  that way.
 
 ## Open decisions waiting on Patrick
-- Ship optimistic UI as the next perf step (a v1.3.3)? yes/no.
-- Install v1.3.2 on the girlfriend's PC now? yes/no.
-- Next session focus: this desktop app, or the `patrickrobelweb` phone/PWA + shared backend (#90)?
+
+- Confirm the task view (pills/tints) looks right in both themes: yes/no.
+- Tag a new release now or after more UI polish?
 
 ## Environment state
-- LEFT RUNNING (production, do NOT stop): the hosted jSpace server on the Dokploy VPS, reachable
-  over Tailscale at `100.100.220.67:9001`.
-- Local: clean. All dev Java stopped; no local server/client running; no Docker; `main` up to date;
-  no feature branches; single worktree (`main`). The v1.3.2 client installer was launched on
-  Patrick's PC for him to click through.
+
+- Dev server and client processes: stopped. No Docker used. No worktrees.
+- Local demo server data: `%USERPROFILE%\.todolist-data` may now contain a
+  seeded demo `session.json` from this session's local server run.
+- Theme state in app: not persisted; next launch starts light as before.
+- Feature branch `feat/ui-pep-up`: deleted local + origin after merge.
